--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,9 @@
   </head>
 
   <body>
-  <div class="container">
-    <%= yield %>
-  </div>
+    <%= render 'layouts/navbar'%>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
