--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="jumbotron">
+  <% if current_user %>
+    <h1>Welcome <%= current_user.email%></h1>
+  <% else %>
+    <h1>Welcome the my photo app</h1>
+  <% end %>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-4">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <% if !user_signed_in? %>
+    <p class="lead">
+      <%= link_to('Sign Up', new_user_registration_path, class: 'btn btn-primary btn-lg') %>
+    </p>
+  <% end %>
+</div>
+<div class="card-deck">
+  <div class="card text-white bg-dark mb-3" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <% if !user_signed_in? %>
+        <p class="lead">
+          <%= link_to('Sign Up', new_user_registration_path, class: 'btn btn-primary') %>
+        </p>
+      <% end %>
+    </div>
+  </div>
+  <div class="card text-white bg-dark mb-3" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <% if !user_signed_in? %>
+        <p class="lead">
+          <%= link_to('Sign Up', new_user_registration_path, class: 'btn btn-primary') %>
+        </p>
+      <% end %>
+    </div>
+  </div>
+</div>
