--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,12 +2,13 @@
 
 body{
   background-color: black !important;
+  color: white !important;
 }
 h1,h2,h3,h4,h5,h6,p,label{
   color: white !important;
 }
-a{color: orange;}
-a:hover{color: orange;filter: brightness(1.4) ;text-decoration: none;}
+a{color: white !important ;}
+a:hover{color: orange !important;filter: brightness(0.9) ;text-decoration: none;}
 .navbar{
   margin-bottom: 2rem;
   background-color: black !important;
@@ -32,4 +33,7 @@ a:hover{color: orange;filter: brightness(1.4) ;text-decoration: none;}
 .btn-primary:hover{
   background-color: orange;
   filter: brightness(0.8);
+}
+.close{
+  line-height: unset;
 }
