--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,27 +1,29 @@
-<%= form_with(model: image) do |form| %>
-  <% if image.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(image.errors.count, "error") %> prohibited this image from being saved:</h2>
+<div class="control-group">
+  <%= form_with(model: image) do |form| %>
+    <% if image.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(image.errors.count, "error") %> prohibited this image from being saved:</h2>
 
-      <ul>
-        <% image.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+        <ul>
+          <% image.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="form-group">
+      <%= form.label :name %>
+      <%= form.text_field :name, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :picture %>
+      <%= form.file_field :picture, accept: 'image/jpeg, image/jpg, image/png, image/gif', class:"form-control-file" %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :picture %>
-    <%= form.file_field :picture, accept: 'image/jpeg, image/jpg, image/png, image/gif' %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
