--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,14 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @image.name %>
-</p>
+<dl class="dl-horizontal">
+  <p>
+    <strong>Name:</strong>
+    <%= @image.name %>
+  </p>
 
-<p>
-  <strong>Picture:</strong>
-  <%= image_tag (@image.picture.url, size:"250x250") if @image.picture? %>
-</p>
+  <p>
+    <strong>Picture:</strong>
+  </p>
+    <%= image_tag(@image.picture.url, width: "30%") if @image.picture? %>
+</dl>
+
 
 <%= link_to 'Edit', edit_image_path(@image) %> |
 <%= link_to 'Back', images_path %>
