--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,6 +11,9 @@
             <%= link_to (truncate(current_user.email, length: 25)).html_safe,edit_user_registration_path,class:"nav-link active" ,title: 'Edit Profile' %>
           </li>
           <li class="nav-item">
+            <%= link_to "Images", images_path, class: "nav-link"%>
+          </li>
+          <li class="nav-item">
             <%= link_to "Logout", destroy_user_session_path, class: "nav-link text-danger", method: :delete%>
           </li>
           <% else %>
