--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,9 +4,9 @@
   <% else %>
     <h1>Welcome the my photo app</h1>
   <% end %>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <p class="lead">This is a simple photo app, You can upload images</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p>It uses carrierwave</p>
   <% if !user_signed_in? %>
     <p class="lead">
       <%= link_to('Sign Up', new_user_registration_path, class: 'btn btn-primary btn-lg') %>
@@ -16,8 +16,8 @@
 <div class="card-deck">
   <div class="card text-white bg-dark mb-3" style="width: 18rem;">
     <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <h5 class="card-title">Special treatment</h5>
+      <p class="card-text">With signing up</p>
       <% if !user_signed_in? %>
         <p class="lead">
           <%= link_to('Sign Up', new_user_registration_path, class: 'btn btn-primary') %>
@@ -27,8 +27,8 @@
   </div>
   <div class="card text-white bg-dark mb-3" style="width: 18rem;">
     <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <h5 class="card-title">Special treatment</h5>
+      <p class="card-text">Use Photo app signed up</p>
       <% if !user_signed_in? %>
         <p class="lead">
           <%= link_to('Sign Up', new_user_registration_path, class: 'btn btn-primary') %>
